--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- Etiqueta de idioma de la página-->
 <html lang="en">
 <head>
+    <!-- Etiqueta para formato de codificación de caracteres -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
