--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- Etiqueta para formato de codificación de caracteres -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Etiqueta imprescindible para responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simón Dice</title>
     <style>
