--- a/index.html
+++ b/index.html
@@ -98,7 +98,28 @@
         <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
       </div>
       <script>
-        
+
+        const celeste = document.getElementById('celeste')
+        const violeta = document.getElementById('violeta')
+        const naranja = document.getElementById('naranja')
+        const verde = document.getElementById('verde')
+        const btnEmpezar = document.getElementById('btnEmpezar')
+
+        class Juego {
+          constructor(){
+            this.inicializar()
+          }
+
+          inicializar(){
+            /* Manipula una clase previamente definida, en este caso manipula la clase hide*/
+            btnEmpezar.classList.add('hide')
+          }
+        }
+
+        function empezarJuego() {
+          var juego = new Juego()
+          alert('El juego va a comenzar')
+        }
       </script>
 </body>
 </html>
