--- a/index.html
+++ b/index.html
@@ -109,12 +109,13 @@
           constructor(){
             this.inicializar()
             this.generarSecuencia()
+            this.siguienteNivel()
           }
 
           inicializar(){
             /* Manipula una clase previamente definida, en este caso manipula la clase hide*/
             btnEmpezar.classList.add('hide')
-            this.nivel = 1
+            this.nivel = 7
             this.colores = {
               celeste,
               violeta,
@@ -126,6 +127,42 @@
           generarSecuencia(){
             /*Primero crea un Array de 10 elementos, después inicializa todo en 0, posteriormente creamos un array(10) con los valores aleatorios, el n es el elemento del array creado al inicio*/
             this.secuencia = new Array(10).fill(0).map(n => Math.floor(Math.random() * 4))
+          }
+
+          siguienteNivel(){
+            this.iluminarSecuencia()
+          }
+
+          transformarNumeroAColor(numero){
+            switch(numero){
+              case 0: 
+                return 'celeste'
+              case 1: 
+                return 'violeta'
+              case 2: 
+                return 'naranja'
+              case 3: 
+                return 'verde'
+            }
+          }
+
+          iluminarSecuencia(){
+            for(var i = 0; i < this.nivel; i++){
+              var color = this.transformarNumeroAColor(this.secuencia[i])
+              console.log(color)
+              setTimeout(() => {
+                console.log(color)
+                this.iluminarColor(color)}, 1000 * i)
+            }
+          }
+
+          iluminarColor(color){
+            this.colores[color].classList.add('light')
+            setTimeout(() => this.apagarColor(color), 350)
+          }
+
+          apagarColor(color){
+            this.colores[color].classList.remove('light')
           }
         }
 
