--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 
           siguienteNivel(){
             this.iluminarSecuencia()
+            this.agregarEventosClick()
           }
 
           transformarNumeroAColor(numero){
@@ -147,8 +148,8 @@
           }
 
           iluminarSecuencia(){
-            for(var i = 0; i < this.nivel; i++){
-              var color = this.transformarNumeroAColor(this.secuencia[i])
+            for(let i = 0; i < this.nivel; i++){
+              const color = this.transformarNumeroAColor(this.secuencia[i])
               console.log(color)
               setTimeout(() => {
                 console.log(color)
@@ -163,6 +164,17 @@
 
           apagarColor(color){
             this.colores[color].classList.remove('light')
+          }
+
+          agregarEventosClick(){
+            this.colores.celeste.addEventListener('click',this.elegirColor)
+            this.colores.violeta.addEventListener('click',this.elegirColor)
+            this.colores.naranja.addEventListener('click',this.elegirColor)
+            this.colores.verde.addEventListener('click',this.elegirColor)
+          }
+
+          elegirColor(ev){
+            console.log(ev)
           }
         }
 
