--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         const naranja = document.getElementById('naranja')
         const verde = document.getElementById('verde')
         const btnEmpezar = document.getElementById('btnEmpezar')
+        const ULTIMO_NIVEL = 10
 
         class Juego {
           constructor(){
@@ -113,10 +114,11 @@
           }
 
           inicializar(){
+            this.elegirColor = this.siguienteNivel.bind(this)
             this.elegirColor = this.elegirColor.bind(this)
             /* Manipula una clase previamente definida, en este caso manipula la clase hide*/
             btnEmpezar.classList.add('hide')
-            this.nivel = 7
+            this.nivel = 1
             this.colores = {
               celeste,
               violeta,
@@ -131,6 +133,7 @@
           }
 
           siguienteNivel(){
+            this.subnivel = 0
             this.iluminarSecuencia()
             this.agregarEventosClick()
           }
@@ -145,6 +148,19 @@
                 return 'naranja'
               case 3: 
                 return 'verde'
+            }
+          }
+
+          transformarColorANumero(color){
+            switch(color){
+              case 'celeste': 
+                return 0
+              case 'violeta': 
+                return 1
+              case 'naranja': 
+                return 2
+              case 'verde': 
+                return 3
             }
           }
 
@@ -171,8 +187,31 @@
             this.colores.verde.addEventListener('click',this.elegirColor)
           }
 
+          eliminarEventosClick(){
+            this.colores.celeste.removeEventListener('click',this.elegirColor)
+            this.colores.violeta.removeEventListener('click',this.elegirColor)
+            this.colores.naranja.removeEventListener('click',this.elegirColor)
+            this.colores.verde.removeEventListener('click',this.elegirColor)
+          }
+
           elegirColor(ev){
-            console.log(ev)
+            const nombreColor = ev.target.dataset.color
+            const numeroColor = this.transformarColorANumero(nombreColor)
+            this.iluminarColor(nombreColor)
+            if(numeroColor === this.secuencia[this.subnivel]){
+              this.subnivel++
+              if (this.subnivel === this.nivel) {
+                this.nivel++
+                this.eliminarEventosClick()
+                if (this.nivel === (ULTIMO_NIVEL + 1)) {
+                  //Ganó
+                } else {
+                  this.siguienteNivel()
+                }
+              }
+            } else {
+              setTimeout(this.siguienteNivel, 2000)
+            }
           }
         }
 
