--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simón Dice</title>
     <style>
+      * {
+        font-family: Arial, Helvetica, sans-serif;
+      }
          body {
         margin: 0;
         background: #dedede;
@@ -97,6 +100,7 @@
         <div id="verde" class="color verde right" data-color="verde"></div>
         <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
       </div>
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
       <script>
 
         const celeste = document.getElementById('celeste')
@@ -108,22 +112,33 @@
 
         class Juego {
           constructor(){
+            this.inicializar = this.inicializar.bind(this)
             this.inicializar()
             this.generarSecuencia()
-            this.siguienteNivel()
+            setTimeout(() => {
+              this.siguienteNivel()
+            }, 500);
           }
 
           inicializar(){
-            this.elegirColor = this.siguienteNivel.bind(this)
+            this.siguienteNivel = this.siguienteNivel.bind(this)
             this.elegirColor = this.elegirColor.bind(this)
             /* Manipula una clase previamente definida, en este caso manipula la clase hide*/
-            btnEmpezar.classList.add('hide')
+            this.toogleBtnEmpezar()
             this.nivel = 1
             this.colores = {
               celeste,
               violeta,
               naranja,
               verde
+            }
+          }
+
+          toogleBtnEmpezar(){
+            if (btnEmpezar.classList.contains('hide')) {
+              btnEmpezar.classList.remove('hide')
+            } else {
+              btnEmpezar.classList.add('hide')
             }
           }
 
@@ -204,21 +219,34 @@
                 this.nivel++
                 this.eliminarEventosClick()
                 if (this.nivel === (ULTIMO_NIVEL + 1)) {
-                  //Ganó
+                  this.ganoElJuego()
                 } else {
-                  this.siguienteNivel()
+                  setTimeout(this.siguienteNivel, 2000)
                 }
               }
             } else {
-              setTimeout(this.siguienteNivel, 2000)
+              this.perdioElJuego()
             }
+          }
+
+          ganoElJuego(){
+            swal('¡Fin del juego!', 'Felicidades, ganaste', "success")
+            .then(() => this.inicializar())
+          }
+
+          perdioElJuego(){
+            swal('¡Fin del juego!', 'Perdiste :(', 'error')
+            .then(() => {
+              this.eliminarEventosClick()
+              this.inicializar()
+            })
           }
         }
 
         function empezarJuego() {
           /*Se coloca está variable en windows*/
           window.juego = new Juego()
-          alert('El juego va a comenzar')
+          swal('El juego va a comenzar')
         }
       </script>
 </body>
