Se agrego la palabra Juego al título de la página

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Etiqueta imprescindible para responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simón Dice</title>
+    <title>Juego Simón Dice</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
